--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,17 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>4.3.11.Final</version>
 		</dependency>
-
+		<dependency>
+	<groupId>c3p0</groupId>
+	<artifactId>c3p0</artifactId>
+	<version>0.9.1.2</version>
+</dependency>
+		<dependency>
+  <groupId>org.hibernate</groupId>
+  <artifactId>hibernate-c3p0</artifactId>
+  <version>4.3.11.Final</version>
+</dependency>
+		
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
