--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Spring Maven Webapp</name>
 	<properties>
-		<springframework.version>4.1.6.RELEASE</springframework.version>
+		<springframework.version>4.1.9.RELEASE</springframework.version>
 	</properties>
 	<url>http://maven.apache.org</url>
 	<dependencies>
@@ -31,6 +31,12 @@
 			<artifactId>spring-web</artifactId>
 			<version>${springframework.version}</version>
 		</dependency>
+		<dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-orm</artifactId>
+	<version>${springframework.version}</version>
+</dependency>
+		
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
