--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,24 +1,26 @@
 #config database
-database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost\:3306/hibernate_20120328?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-database.username=root
-database.password=rootott
- 
+jdbc.url=jdbc\:mysql\://localhost\:3306/goods?useUnicode\=true&characterEncoding\=UTF-8
+jdbc.username=root
+jdbc.password=rootott
+jdbc.driver=com.mysql.jdbc.Driver
+
 #config collection pool
-pool.initialPoolSize=1
-pool.minPoolSize=0
-pool.maxPoolSize=2
-pool.maxIdleTime=120
-pool.acquireIncrement=1
- 
+pool.maxIdleTime=7200
+pool.maxIdleTimeExcessConnections=10
+pool.checkoutTimeout=3600000
+pool.maxPoolSize=20
+pool.initialPoolSize=10
+pool.minPoolSize=10
+pool.acquireIncrement=5
+namingStrategy.maxLength=64
+
 #config hibernate properties
+hibernate.show_sql=true
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-hibernate.show_sql=false
+hibernate.hbm2ddl.auto=create
+hibernate.jdbc.batch_size=30
+hibernate.jdbc.fetch_size=50
 hibernate.format_sql=true
-hibernate.jdbc.batch_size=50
-hibernate.hibernate.connection.SetBigStringTryClob=true
-hibernate.hibernate.archive.autodetection=class
-hibernate.hibernate.connection.charSet=UTF-8
-hibernate.hibernate.cache.use_query_cache=false
-hibernate.hibernate.cache.use_second_level_cache=false
-hibernate.hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
+hibernate.cache.use_second_level_cache=false
+hibernate.cache.provider_class=org.hibernate.cache.EhCacheProvider
+hibernate.cache.use_query_cache=false
