--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/mybatis?zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&useunicode=true&characterencoding=utf8
+jdbc.url=jdbc:mysql://localhost:3306/goods?zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&useunicode=true&characterencoding=utf8
 jdbc.username=root
 jdbc.password=rootott
 jdbc.maxActive=500
